assets/css/hero.css
.hero-container {
  display: grid;
  grid-template-columns: 2fr 1fr;
  margin: 200px auto 0;
  width: 950px;
  gap: 200px;
}

.hero-container img {
  max-width: 375px;
  border-radius: 5%;
}

.hero-intro {
  margin-top: 40px;
  font-size: 1.25rem;
  color: #22c55e;
  font-weight: 600;
}

.hero-name {
  font-size: 3.5rem;
  font-weight: 700;
}

.hero-role {
  font-size: 2rem;
  font-weight: 500;
  color: #717182;
}
.hero-description {
  margin-top: 20px;
  font-size: 1rem;
  color: #717182;
  max-width: 500px;
}
.hero-buttons {
  display: flex;
}
.hero-buttons .btn-contact {
  display: flex;
  margin-top: 30px;
  padding: 12px 24px;
  background-color: #22c55e;
  color: white;
  text-decoration: none;
  border: none;
  border-radius: 999px;
  font-weight: 600;
  cursor: pointer;
  display: flex;
}

.hero-buttons .btn-linkedin,
.hero-buttons .btn-github {
  display: flex;
  align-items: center;
  justify-content: center;
  margin-left: 20px;
  margin-top: 30px;
  width: 40px;
  height: 40px;
  border: 1px solid #22c55e;
  border-radius: 50%;
  font-weight: 600;
  cursor: pointer;
}

.btn-hero-social img {
  width: 60%;
  height: 60%;
}

